--- a/index.html
+++ b/index.html
@@ -1,15 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GTA 5</title>
     <link rel="shortcut icon" href="src/imagens/favicon.png" type="image/x-icon">
-    
-</head>
-<body>
-    
+    <link rel="https://fonts.cdnfonts.com/css/chalet" href="">
 
+</head>
+
+<body>
+
+    <header class="heading">
+        <div class="logo">
+            <img src="src/imagens/logo-rockstar.svg" alt="">
+            <hr>
+            <img src="src/imagens/logo-gta.svg" alt="">
+        </div>
+        <nav>
+            <ul class="menu">
+                <li><a href="#home">Home</a>
+                </li>
+                <li>
+                    <a href="#comprar">Comprar</a>
+                <li>
+                    <a href="https://support.rockstargames.com/categories/200013306" target="_blank">Suporte</a>
+                </li>
+                </li>
+            </ul>
+
+        </nav>
+    </header>
+
+    <main class="home" id="home">
+        <img class="img-fundo" src="/src/imagens/bg-main.png">
+
+        <div class="informations">
+            <div class="list-and-games">
+                <img src="src/imagens/logo-gta-v.svg" alt="">
+                <img src="src/imagens/logo-gta-online.svg" alt="">
+            </div>
+            <h1 class="title">Já disponíveis para playstation 5 e Xbox Series X | S</h1>
+            <p class="text">
+                Experimente os fenÔmenos de entretenimento Grand Theft Auto V e GTA Online
+            </p>
+
+        </div>
+
+    </main>
+
+    <section class="buy-now" id="buy-now">
+        <h2 class="title">Compre já</h2>
+        <div class="card">
+            <img class="game-cover" src="src/imagens/gta5.jpg" alt="">
+            <div class="informations">
+                <h3>Grand Theft Auto</h3>
+                <p>
+                    Inclui <strong>Modo História do GTA V</strong> e <strong>GTA Online</strong>
+                </p>
+                <ul class="plataforms">
+                    <li>
+                        <img src="src/imagens/logo-ps5.svg" alt="">
+                    </li>
+                    <li>
+                        <img src="src/imagens/logo-xbox-series-s.svg" alt="">
+                    </li>
+                    <li>
+                        <img src="src/imagens/logo-ps4.svg" alt="">
+                    </li>
+                    <li>
+                        <img src="src/imagens/logo-xbox-one.svg" alt="">
+                    </li>
+                    <li>
+                        <img src="src/imagens/logo-pc.svg" alt="">
+                    </li>
+                </ul>
+            </div>
+            <button class="btn-plataform">
+                Selecione a plataforma
+                <ul class="plataforms">
+                    <li>
+                        <img src="src/imagens/logo-ps5.svg" alt="">
+                    </li>
+                    <li>
+                        <img src="src/imagens/logo-xbox-series-s.svg" alt="">
+                    </li>
+                    <li>
+                        <img src="src/imagens/logo-ps4.svg" alt="">
+                    </li>
+                    <li>
+                        <img src="src/imagens/logo-xbox-one.svg" alt="">
+                    </li>
+                    <li>
+                        <img src="src/imagens/logo-pc.svg" alt="">
+                    </li>
+                </ul>
+
+            </button>
+        </div>
+    </section>
 
 </body>
+
 </html>
