--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                     <a href="#comprar">Comprar</a>
                 <li>
                     <a href="https://support.rockstargames.com/categories/200013306" target="_blank">Suporte</a>
+                    <img src="src/imagens/icone-link.svg" alt="">
                 </li>
                 </li>
             </ul>
