adding stylecss, font and links to the css

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="shortcut icon" href="src/imagens/favicon.png" type="image/x-icon">
     <link rel="https://fonts.cdnfonts.com/css/chalet" href="">
 
+    <link rel="stylesheet" href="src/css/reset.css">
+    <link rel="stylesheet" href="src/css/style.css">
+    <link rel="stylesheet" href="src/css/fonts.css">
+
 </head>
 
 <body>
@@ -25,8 +29,10 @@
                 <li>
                     <a href="#comprar">Comprar</a>
                 <li>
-                    <a href="https://support.rockstargames.com/categories/200013306" target="_blank">Suporte</a>
-                    <img src="src/imagens/icone-link.svg" alt="">
+                    <a href="https://support.rockstargames.com/categories/200013306" target="_blank">Suporte <img
+                            src="src/imagens/icone-link.svg" alt="">
+                    </a>
+
                 </li>
                 </li>
             </ul>
@@ -35,7 +41,7 @@
     </header>
 
     <main class="home" id="home">
-        <img class="img-fundo" src="/src/imagens/bg-main.png">
+        <img class="img-background" src="/src/imagens/bg-main.png">
 
         <div class="informations">
             <div class="list-and-games">
@@ -44,9 +50,9 @@
             </div>
             <h1 class="title">Já disponíveis para playstation 5 e Xbox Series X | S</h1>
             <p class="text">
-                Experimente os fenÔmenos de entretenimento Grand Theft Auto V e GTA Online
+                Experimente os fenômenos de entretenimento Grand Theft Auto V e GTA Online
             </p>
-
+            <a class="btn-buy" href="#comprar">Compre já</a>
         </div>
 
     </main>
