refactoring index.html

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     </li>
                 </ul>
             </div>
-            <button class="btn-plataform">
+            <button class="btn-plataform" id="button">
                 Selecione a plataforma
                 <ul class="plataforms">
                     <li>
@@ -108,7 +108,7 @@
             </button>
         </div>
     </section>
-
+    <script src="src/js/index.js"></script>
 </body>
 
 </html>
